chore(StorageManager): typos and minor code cleanups
Responding to code inspections and suggestions.